<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfilePictureActivity"
    android:background="?attr/backgroundColor">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:padding="3dp"
        android:src="@drawable/rounded_logo"
        app:civ_border_color="@color/planthuntGreen"
        app:civ_border_width="3dp"
        />

    <TextView
        android:id="@+id/change_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:textColor="?attr/title_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="change picture"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_button"
        android:layout_centerHorizontal="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="375dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:text="save"
            android:onClick="saveProfilePicture"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:textColor="?attr/title_color"
            android:textSize="30sp"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exit_button"
            android:layout_width="375dp"
            android:layout_height="120dp"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:text="exit"
            android:textColor="?attr/title_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="exitProfilePicture"
            />


    </LinearLayout>

</RelativeLayout>