...
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:adjustViewBounds="true"
                android:background="@null"
                android:id="@+id/changeButton"
                app:layout_constraintBottom_toTopOf="@id/guidelineH5"
                app:layout_constraintLeft_toRightOf="@id/guidelineV2"
                app:layout_constraintRight_toLeftOf="@id/guidelineV1"
                app:layout_constraintTop_toBottomOf="@id/guidelineH6" />

            <LinearLayout
...
